--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,9 +16,9 @@
       "@typescript-eslint/no-require-imports": "error",
       "@typescript-eslint/array-type": "error",
       "@typescript-eslint/await-thenable": "error",
-      "@typescript-eslint/ban-ts-comment": "error",
+      // "@typescript-eslint/ban-ts-comment": "error",
       "camelcase": "off",
-      "@typescript-eslint/consistent-type-assertions": "error",
+      // "@typescript-eslint/consistent-type-assertions": "error",
       "@typescript-eslint/explicit-function-return-type": ["error", {"allowExpressions": true}],
       "@typescript-eslint/func-call-spacing": ["error", "never"],
       "@typescript-eslint/no-array-constructor": "error",
